--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.2
   flutter_secure_storage: ^9.0.0
   flutter_dotenv: ^5.1.0
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
