--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   flutter_dotenv: ^5.1.0
   awesome_snackbar_content: ^0.1.3
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
