--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   awesome_snackbar_content: ^0.1.3
   cached_network_image: ^3.3.1
+  image_picker: ^1.0.8
 
 dev_dependencies:
   flutter_test:
