--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   day_picker: ^2.2.0
   table_calendar: ^3.0.9
   web_socket_channel: ^3.0.0
+  firebase_core: ^2.31.1
+  firebase_database: ^10.5.6
 
 dev_dependencies:
   flutter_test:
