--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   web_socket_channel: ^3.0.0
   firebase_core: ^2.31.1
   firebase_database: ^10.5.6
+  provider: ^6.1.2
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
