--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,11 @@ dependencies:
   day_picker: ^2.2.0
   table_calendar: ^3.0.9
   web_socket_channel: ^3.0.0
-  firebase_core: ^2.31.1
-  firebase_database: ^10.5.6
+  firebase_core: ^3.0.0
+  firebase_database: ^11.0.0
   provider: ^6.1.2
-  intl: ^0.18.1
+  intl: 0.19.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
