Android notification service

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,4 +67,21 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    // Import the BoM for the Firebase platform
+    implementation(platform("com.google.firebase:firebase-bom:33.1.0"))
+
+    // Add the dependency for the Realtime Database library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation("com.google.firebase:firebase-database")
+
+    // Add Gson dependency
+    implementation("com.google.code.gson:gson:2.11.0")
+
+    // Add Ktor client dependency
+    implementation("io.ktor:ktor-client-core:$ktor_version")
+    implementation("io.ktor:ktor-client-cio:$ktor_version")
+
+    // Add DataStore dependency
+    implementation("androidx.datastore:datastore-preferences:1.1.1")
+}
