--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   provider: ^6.1.2
   intl: 0.19.0
   badges: ^3.1.2
+  flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
   flutter_test:
