--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   intl: 0.19.0
   badges: ^3.1.2
   firebase_messaging: ^15.1.5
-  flutter_inappwebview: ^6.0.0
+  flutter_custom_tabs: ^2.1.0
 
 dev_dependencies:
   flutter_test:
