feat: add project name

--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -41,4 +41,4 @@ jobs:
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: |
-          vercel --prod --confirm --token $VERCEL_TOKEN ./build/web
+          vercel --prod --confirm --token $VERCEL_TOKEN --name enlight ./build/web
