--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   firebase_messaging: ^15.1.5
   flutter_custom_tabs: ^2.1.0
   app_links: ^6.3.2
+  flutter_rating_stars: ^1.1.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
